# AIOgram-template

./: .env_example  README.md  alembic.ini  main.py  pyproject.toml
src/app/: settings.py
src/app/adapters/telegram_bot/: callbacks.py  main.py  middleware.py
src/app/adapters/telegram_bot/keyboards/: contacts.py  random_call.py
src/app/adapters/telegram_bot/routers/: echo.py  start.py
src/app/adapters/telegram_bot/routers/contacts/: _router.py
src/app/adapters/telegram_bot/routers/random_value/: _router.py
src/app/adapters/telegram_bot/routers/telegram_id/: _router.py
src/app/alembic/: env.py
src/app/alembic/versions/: 2024_05_08_152241-b8a18b0f89ff_initial_migration.py  2024_05_12_172945-e6014a0bcaba_initial_migration.py
src/app/db/: __init__.py  base.py  types.py
src/app/db/models/: users.py
src/app/di/: _container.py
src/lib/: null_safety.py  utils.py
