[project]
name = "AIOgram_template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bllagden", email = "bllagden99@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.7.1",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1",
    "aioinject>=0.33.0",
    "aiogram>=3.5.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.3",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
]

[tool.pdm.scripts]
lint = {composite = [
  "black .",
  "ruff check . --fix --show-fixes",
  "black .",
  "mypy .",
]}

[tool.pytest.ini_options]
pythonpath = "src"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
lint.select = ["ALL"]
lint.fixable = [
  "F",
  "E",
  "W",
  "I",
  "COM",
  "UP",
  "RUF",
]
lint.ignore = [
  "E501", # Line Length
  "A003", # Class attribute ... is shadowing a python builtin
  "ANN101",
  "ANN102",
  "D", # pydocstyle
  "PD", # pandas-vet
  "INP",
  "TCH001",
  "TCH002",
  "TCH003",
  "RUF001",
  "RUF002",
  "RUF003",
  "RUF012",
  "RUF200",
  "EXE002",
  "TD003",
  "FIX002",
  "ERA001",
  "TID252",
  "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",
  "PT006", # Wrong name(s) type in `@pytest.mark.parametrize`, expected `tuple`
  "S311",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
 
[tool.ruff.lint.mccabe]
max-complexity = 6


[tool.mypy]
python_version = "3.11"
plugins = [
  "pydantic.mypy",
]

follow_imports = "normal"
ignore_missing_imports = false
strict = true

check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true

allow_redefinition = false
disallow_any_explicit = false
ignore_errors = false
local_partial_types = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true

pretty = true
show_column_numbers = true
show_error_codes = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true